Homepage half-coded

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged Retreat</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -39,9 +39,20 @@
   <main>
 
     <section>
+      <h2>Retreat from the desk, return refreshed.</h2>
+      <img src="img/jake-melara-30679-unsplash.jpg"
+      alt="Woman walking on bridge"/>
     </section>
 
     <aside>
+      <h4>Wnat to join the next retreat?</h4>
+      <p>Find out when we are holding our next retreat
+        and how your company or tean can sign up</p>
+      <div>
+        <h4>Find out more</h4>
+        <input type="text" name="name" value="email address">
+        <input type="button" value="Download Itinerary">
+      </div>
     </aside>
 
   </main>
