--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@
           <div class="footer-content">
               <h4>Contact</h4>
               <address class="contact">
+                <h4>Contact</h4>
+                <p>
+                  555-555-5555<br>
+                  hello@unplugged.com
+                </p>
               </address>
               <div class="social">
                   <div class="social-icons">
